<resources>
    <string name="app_name">CalCal</string>


    <!--  scan_barcode_dialog  -->
    <string name="add_code">Add Product Code</string>
    <string name="product_code">Product Code</string>
    <string name="edit_product">Edit Product</string>
    <string name="product">Product</string>
    <string name="measure">Measure</string>
    <string name="dot">DOT</string>
    <string name="one">1</string>
    <string name="amount">Amount</string>
    <string name="decrease">Decrease</string>
    <string name="add">Add</string>
    <string name="save_changes">Save Changes</string>
    <string name="back_to_main_activity">Back to main activity</string>
    <string name="show_add_product_dialog">Show add product dialog</string>
    <string name="delete">Delete</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="calories">Calories</string>
    <string name="save_product">Save Product</string>
    <string name="add_product">Add Product</string>
    <string name="add_fast_calorie_value">Add Fast Calorie Value</string>
    <string name="move_to_custom_product_view">Continue to Add Product</string>
    <string name="add_dotan_self_product">Add Dotan items to personal cart</string>
    <string name="today">Today</string>
    <string name="calorie_tracker">Calorie Tracker</string>
    <string name="settings">Settings</string>
    <string name="custom_list_icon">Custom List Icon</string>
    <string name="shopping_bag_icon">Shopping Bag Icon</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="back">Back</string>
    <string name="display">Display</string>
    <string name="night_mod">Night Mode</string>
    <string name="language">Language</string>
    <string name="enable_dark_theme">Enable Dark Theme</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="hebrew">Hebrew</string>
    <string name="arrow">Arrow</string>
    <string name="information">Information</string>
    <string name="about">About</string>
    <string name="about_the_app">About the app</string>
    <string name="version">Version 1.0.0</string>
    <string name="ok">OK</string>
    <string name="about_message">This is an amazing app!\\n\\nDeveloped by: Dotcomico\\nVersion: 1.0.0</string>
    <string name="arabic">arabic</string>
    <string name="english">English</string>
    <string name="cancel">Cancel</string>
    <string name="ex_product_name">Full product name</string>
    <string name="ex_unit_amount">1 unit / 150 gram</string>
    <string name="barcode_info">barcode info</string>
    <string name="expand_more">expand more</string>
    <string name="plus_icon">plus icon</string>
    <string name="minus_icon">minus icon</string>
    <string name="_1">1</string>
    <string name="self_search">Self Search</string>
    <string name="ex_calories">275</string>
    <string name="type_product">Type Product Name</string>
    <string name="edit_amount">Edit Amount</string>
    <string name="ex_description">Additional description or product info</string>
    <string name="not_what_you_looked_for">Not what you were looking for?</string>
    <string name="continue_self_search">Continue with self search</string>
    <string name="space">\" \"</string>
    <string name="blank_">-</string>
    <string name="remaining_calories">Remaining</string>
    <string name="tue_18">Tue 18</string>
    <string name="thu_20">Thu 20</string>
    <string name="catalog_icon">catalog icon</string>
    <string name="product_not_found_title">This product does not exist in the system yet</string>
    <string name="product_not_found_subtext">Continue with self search</string>
    <string name="empty_state_icon_desc" />
    <string name="fast_add">Fast add</string>
    <string name="new_product">New Product</string>
    <string name="search_suggestion">Search Suggestion</string>
    <string name="search_in_web">Search in Web..</string>
    <string name="custom_products">Custom Products</string>
</resources>