<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@android:color/transparent"
    android:windowSoftInputMode="adjustResize"
>

    <!-- Product Selection Bottom Sheet -->
    <LinearLayout
        android:id="@+id/ly_productSelectionBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog_background"
        android:elevation="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:layout_gravity="center"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:textStyle="bold"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dialogBorder"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"/>/>

        <!-- Calories Display Header -->
        <TextView
            android:id="@+id/tv_caloriesHeader"
            android:layout_width="120dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/sty_2_half"
            android:gravity="center"
            android:text="@string/calories"
            android:textColor="@color/primaryText" />

        <!-- Product Information Section -->
        <RelativeLayout
            android:id="@+id/rl_productInfoSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="3dp"
            android:background="@drawable/edit_text_background">

            <!-- Selected Product Name -->
            <TextView
                android:id="@+id/tv_selectedProductName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:paddingHorizontal="30dp"
                android:text="@string/product"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="horizontal" />

            <!-- Expand More Icon -->
            <ImageView
                android:id="@+id/iv_expandProductInfo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/expand_more"
                android:src="@drawable/baseline_expand_more"
                app:tint="@color/primaryText" />

            <!-- QR Code Information (Hidden by default) -->
            <TextView
                android:id="@+id/tv_barcodeInfo"
                android:paddingStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_selectedProductName"
                android:text="@string/barcode_info"
                android:textSize="16sp"
                android:textColor="@color/secondaryText"
                android:gravity="start"
                android:visibility="gone" />

        </RelativeLayout>

        <!-- Serving Size and Amount Input Section -->
        <LinearLayout
            android:id="@+id/ll_servingAmountSection"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">

            <!-- Amount Input Field -->
            <EditText
                android:id="@+id/et_addAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:gravity="center"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:text="@string/_1"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/tertiaryText" />

            <!-- Separator Dot -->
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:contentDescription="@string/dot"
                android:src="@drawable/ic_baseline_circle"
                android:visibility="visible"
                app:tint="@color/primary" />

            <!-- Serving Size Unit Display -->
            <TextView
                android:id="@+id/tv_unit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="3dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_text_background"
                android:gravity="center"
                android:text="@string/measure"
                android:textColor="@color/secondaryText" />

        </LinearLayout>

        <!-- Amount Controls and Add Button Section -->
        <RelativeLayout
            android:id="@+id/rl_controlsSection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp">

            <!-- Plus Button -->
            <ImageView
                android:id="@+id/iv_increaseAmount"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/circle_background_button"
                android:contentDescription="@string/plus_icon"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_add"
                app:tint="@color/primaryText" />

            <!-- Minus Button -->
            <ImageView
                android:id="@+id/iv_decreaseAmount"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_toEndOf="@id/iv_increaseAmount"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/circle_background_button"
                android:contentDescription="@string/minus_icon"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_horizontal_rule"
                app:tint="@color/primaryText"/>

            <!-- Add to Consumption Button -->
            <Button
                android:id="@+id/btn_addToConsumption"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:background="@drawable/rounded_btn_background"
                android:text="@string/add"
                android:textColor="@color/primaryText" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>