<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.screens.MyProductActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productsRecyclerView"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarSize="5dp"
        android:transcriptMode="alwaysScroll"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layoutEditProduct"
        android:visibility="gone"
        android:elevation="8dp"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_baseline_clear" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_product"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/et_food"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:autofillHints="מוצר"
                android:hint="@string/product"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:background="@drawable/edit_text_background"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/tertiaryText"
                android:gravity="start" />

            <ImageView
                android:id="@+id/iv_barcodeScan"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/scan_barcode"
                android:src="@drawable/ic_baseline_qr_code"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_kal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="קלוריות"
            android:hint="@string/calories"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_baseline_local_fire_department"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/tertiaryText"
            android:gravity="start"
            android:maxLines="1"
            android:inputType="number" />

        <com.example.calories.ui.views.UnitSelectorView
            android:id="@+id/unit_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_product"
            android:layout_marginTop="13dp"
            android:textColor="@color/primaryText"
           android:backgroundTint="@color/tertiary" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_product"
        android:src="@drawable/baseline_add_white"
        app:backgroundTint="@color/tertiary"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
